@@ -1,8 +1,10 @@
-CHANGES.txt - 06/21/2005
+CHANGES.txt - 06/24/2005
 ------------------------
 
 CHANGES IN CUPS V1.2.0b1
 
+	- Forced classification markings did not work when the
+	  job-sheets parameters were "none,none".
 	- "lpstat -l -p" incorrectly showed all users as allowed,
 	  even if the queue was restricted to certain users (STR
 	  #801)
